<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cybermilad.multilang.MainActivity"
    android:padding="10dp" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/welcome_text" />

    <TextView
        android:id="@+id/my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/my_name_text" />

    <TextView
        android:id="@+id/my_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/my_old_text" />

    <TextView
        android:id="@+id/my_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/my_job_text" />    
    
    <TextView
        android:id="@+id/love_android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/android_text" />

    <TextView
        android:id="@+id/change_lap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/change_lap_text" />
    
    <Spinner
        android:id="@+id/change_lang_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/lang_array" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_text" />

</LinearLayout>
